--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     <div>
         <h3 data-testid="currentUTCTime" id="timenow"></h3>
           </div>
-         
+          <footer>
+            <div class="github_link" data-testid="githubURL">
+        <a href="https://github.com/Luchieart/" class="github_link">Luchieart</a>
+            </div>
+        </footer> 
 
    </div> 
-  
+   
   
   <script src="stageone.js"></script>
 </body>
