--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
    <div class="wrap_container">
 <div class="container">
-    <img src="img/Oluchi.jpg" alt="Chukwuemeka Oluchi" data-testid='slackDisplayImage' height="190px" width="190px">
+    <img src="Oluchi.jpg" alt="Chukwuemeka Oluchi" data-testid='slackDisplayImage' height="190px" width="190px">
 </div>
 <div><h1 data-testid="slackUserName">Chukwuemeka Oluchi</h1>
    
