--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <footer>
             <div class="github_link" data-testid="githubURL">
-        <a href="https://github.com/Luchieart/" class="github_link">Luchieart</a>
+        <a href="https://github.com/Luchieart/stageone.git" class="github_link">Luchieart</a>
             </div>
         </footer> 
 
